assets/app.css
/* base */

body {
  text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  border: 0;
  padding: 0;
}

input::-moz-focus-inner,
input[type=range]::-moz-focus-outer,
button::-moz-focus-inner {
  border: 0;
}

button {
  color: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: inherit;
  text-indent: inherit;
  outline: 0;
  padding: 0;
  margin: 0;
  border: 0;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

button:hover,
button:active {
  outline: 0;
}

li,
ol {
  list-style-type: none;
}

/* layout, state */

body,
html {
  position: fixed;
}

body {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
}

main {
  display: flex;
  flex-flow: row nowrap;
  flex: 1 1 auto;
  z-index: 1;
  min-height: 0;
}

header {
  width: 100%;
  height: 44px;
  box-sizing: border-box;
  z-index: 1;
}

.scrollable {
  position: relative;
  overflow-x: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;
  min-height: 0;
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.background-image {
  background-position: center;
  margin: -64px;
  height: calc(100% + 128px);
  width: calc(100% + 128px);
}

footer {
  bottom: 0;
  width: 100%;
  z-index: 1;
}

.lists {
  display: block;
  transition: transform 0.4s 0s ease;
}

.main {
  display: flex;
  left: -50%;
  position: relative;
  transition: transform 0.4s 0s ease;
}

@media (orientation: portrait) {
  main {
    width: 200vw;
  }

  .full {
    width: 100vw;
  }

  .main.swipe,
  .lists.swipe {
    transition: none;
  }

  .main.swiped,
  .lists.swiped {
    transition: transform 0.4s 0s ease-out;
  }

  .view-main .main,
  .view-list .lists {
    transform: translate3d(0, 0, 0);
  }

  .view-main .lists {
    transform: translate3d(-100%, 0, 0);
  }

  .view-list .main {
    transform: translate3d(100%, 0, 0);
  }

  footer {
    height: 120px;
  }
}

@media (orientation: landscape) {
  .full {
    width: 50vw;
  }

  .main {
    transform: translate3d(100%, 0, 0);
  }

  .lists {
    transform: translate3d(0, 0, 0);
  }

  footer {
    height: 90px;
  }
}

.modal-background,
.modal-outer {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.modal-background {
  z-index: 1000;
}

.modal-outer {
  display: flex;
  z-index: 1001;
  align-items: center;
  justify-content: center;
}

/* module, state, theme */

body {
  font-size: 16px;
  font-family: -apple-system, BlinkMacSystemFont, "Migu 1C", "Noto Sans CJK JP Regular", "Noto Sans CJK JP", Arial, sans-serif;
  font-feature-settings: 'palt' 1;
  transition: color 0.2s 0s ease-out, background-color 0.2s 0s ease-out;
}

body.light {
  color: #303030;
  background-color: #ffffff;
}

body.dark {
  color: #d0d0d0;
  background-color: #000000;
}

kbd {
  font-family: monospace, sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 32px;
  height: 32px;
  font-size: 16px;
  color: #404040;
  border-radius: 3px;
  margin: 3px;
  box-sizing: border-box;
}

kbd kbd {
  padding: 6px;
  background-color: #e0e0e0;
}

svg path {
  transition: stroke 0.2s 0s ease-out, fill 0.2s 0s ease-out;
}

.light svg .fill {
  stroke: #404040;
  fill: #404040;
}

.light svg .stroke {
  stroke: #404040;
  fill: none;
}

.dark svg .fill {
  stroke: #e0e0e0;
  fill: #e0e0e0;
}

.dark svg .stroke {
  stroke: #e0e0e0;
  fill: none;
}

.rtl .reversible-icon {
  transform: scale(-1, 1);
}

.contextmenu {
  display: none;
}

.background-overlay {
  transition: background-color 0.2s 0s ease-out;
}

.light .background-overlay {
  background-color: rgba(255, 255, 255, 0.4);
}

.dark .background-overlay {
  background-color: rgba(0, 0, 0, 0.4);
}

.auto-hide-scrollbar .scrollable {
  overflow-y: auto;
}

.auto-hide-scrollbar .scrollable::-webkit-scrollbar {
  width: 12px;
}

.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb {
  border-radius: 10px;
  padding: 2px;
  margin: 2px;
}

.light.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb {
  background-color: rgba(48, 48, 48, 0.2);
}

.light.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb:hover {
  background-color: rgba(48, 48, 48, 0.6);
}

.dark.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb {
  background-color: rgba(208, 208, 208, 0.2);
}

.dark.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb:hover {
  background-color: rgba(208, 208, 208, 0.6);
}

.list-item {
  margin-top: 1px;
  transition: border-bottom 0.2s 0s ease-out;
}

.light .list-item {
  border-bottom: dashed 1px #404040;
}

.dark .list-item {
  border-bottom: dashed 1px #e0e0e0;
}

.header-items {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0 10px;
  width: 100%;
  height: 44px;
  box-sizing: border-box;
}

.header-item {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 32px;
}

.header-item:first-of-type {
  margin: 0;
}

.header-item:nth-of-type(n+2) {
  margin: 0 0 0 10px;
}

.header-iconlabel {
  min-width: 0;
}

.header-space {
  visibility: hidden;
  flex: 1 1 auto;
}

.header-item-iconlabel {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  min-width: 0;
}

.header-item-icon {
  height: 32px;
  stroke-width: 16;
  transition: width 0.2s 0s ease, height 0.2s 0s ease;
}

.animation .header-item:hover .header-item-icon {
  animation: hover_img 0.5s linear 0s;
}

.header-item:active .header-item-icon,
.header-item.active .header-item-icon {
  height: 28px;
}

.header-item-label {
  flex: 1 1 auto;
  margin: 0 4px;
  font-size: 17px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.view-list .header-back.root {
  visibility: hidden;
}
/* ... */

